// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`usePayments should render in error state 1`] = `
<div>
  <span
    data-test="instruments-error"
  >
    Error
  </span>
</div>
`;

exports[`usePayments should render in loading state 1`] = `
<div>
  <span
    data-test="instruments-loading"
  >
    yes
  </span>
</div>
`;
